--- a/JojaMarket/pom.xml
+++ b/JojaMarket/pom.xml
@@ -121,6 +121,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
