--- a/JojaMarket/src/main/webapp/WEB-INF/web.xml
+++ b/JojaMarket/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,12 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:spring.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
 </web-app>
